error resoved. with .(end of the script line)

--- a/views/home.jade
+++ b/views/home.jade
@@ -191,8 +191,8 @@ block content
   script(type='text/javascript', src='js/controllers.js')
   script(type='text/javascript', src='js/filters.js')
   script(type='text/javascript', src='js/directives.js')
-  script
-    $('document').ready(function() {
+  script(type='text/javacript').
+    $('document').ready(function(){
       setTimeout(function(){
         $('div#wrapper').parent().removeClass();
         $('div#footer').parent().removeClass();
